Fix crashes and failing test cases
Mainly it’s the moving around of classes and using AndroidTestCase to be able to write DBs